--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <h3 class="text-dark mt-lg-5 mt-3 text-center">Projects</h3>
         <div class="row justify-content-center align-items-center">
             <div class="col-md-4 d-flex justify-content-center p-lg-5 my-5">
-                <div class="card mb-5 mb-xl-0" style="width: 18rem;">
+                <div class="card mb-5 mb-xl-0 card-style" >
                     <img src="images/salon-admin.png" class="card-img-top" alt="Project Image">
                     <div class="card-body">
                         <h5 class="card-title">Salon Admin</h5>
@@ -66,7 +66,7 @@
                 </div>
             </div>
             <div class="col-md-4 d-flex justify-content-center p-lg-5 my-5">
-                <div class="card mb-5 mb-xl-0" style="width: 18rem;">
+                <div class="card mb-5 mb-xl-0 card-style" >
                     <img src="images/pets-profile.png" class="card-img-top" alt="Project Image">
                     <div class="card-body">
                         <h5 class="card-title">Pet Profile</h5>
@@ -75,7 +75,7 @@
                 </div>
             </div>
             <div class="col-md-4 d-flex justify-content-center p-lg-5 my-5">
-                <div class="card mb-5 mb-xl-0" style="width: 18rem;">
+                <div class="card mb-5 mb-xl-0 card-style" >
                     <img src="images/profile-def.png" class="card-img-top" alt="Project Image">
                     <div class="card-body">
                         <h5 class="card-title">NFC Profile</h5>
@@ -151,7 +151,7 @@
             <h3 class="text-dark mt-lg-3 p-3 mt-3 mb-5 text-center">Contact</h3>
             <div class="col-md-6 py-4">
                 <h4 class="text-center mb-3 contact-h4">Visit Us</h4>
-                <iframe class="iframe-container" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11161.456852163205!2d124.6265116328628!3d8.482756646756368!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x32fff3e8b873b9e3%3A0x93f83cae253c9341!2sSavemore%20Market-Kauswagan!5e0!3m2!1sen!2sph!4v1723640075532!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe class="iframe-container" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11161.456852163205!2d124.6265116328628!3d8.482756646756368!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x32fff3e8b873b9e3%3A0x93f83cae253c9341!2sSavemore%20Market-Kauswagan!5e0!3m2!1sen!2sph!4v1723640075532!5m2!1sen!2sph" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="col-md-6 py-4">
                 <h4 class="text-center mb-3 contact-h4">Message Us</h4>
